// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e should transform runtime 1`] = `
Object {
  "diagnostics": Array [],
  "outputText": "import { px2rem as px2rem_1 } from \\"typescript-styled-components-px2rem/lib/px2rem\\";
var OPTIONS_1 = {
    rootValue: 100,
    unitPrecision: 5,
    minPixelValue: 2,
    multiplier: 1
};
import styled, { css, createGlobalStyle, keyframes } from 'styled-components';
const mixins = css \`
  padding: 0 0.16rem;
  margin: 0.16rem 0.32rem 0.16rem 0.32rem;
\`;
const Animation = keyframes \`
  from {
    transform: translateX(1rem);
  }

  to {
    transform: translateX(-1rem);
  }
\`;
const Input = styled.input.attrs(props => ({
    type: 'password',
    size: props.size || '1em',
    width: props.width || 100,
})) \`
  color: palevioletred;
  font-size: 0.14rem;
  border: 1px solid palevioletred;
  border-radius: 0.08rem;
  width: \${props => px2rem_1(props.width, OPTIONS_1)};
  padding: \${props => props.size};
\`;
const fontSize = 18;
const GlobalStyle = createGlobalStyle \`
  html body {
    font-size: \${px2rem_1(fontSize, OPTIONS_1)};
  }
\`;
function getHeight() {
    const height = 100;
    return height + window.screen.availHeight / 2;
}
const BlockButton = styled.button \`
  \${mixins};
  display: block;
  width: 100%;
  height: \${px2rem_1(getHeight(), OPTIONS_1)};
  line-height: 0.96rem;
\`;
const lineHeight = '44';
const InlineButton = styled.button \`
  display: inline;
  width: \${(props) => px2rem_1(() => {
    if (props.width) {
        return props.width;
    }
    else {
        return 0;
    }
}, OPTIONS_1)};
  line-height: \${px2rem_1(lineHeight, OPTIONS_1)};
\`;
const ExtendedButton = styled(InlineButton) \`
  width: 1.2rem;
  height: 0.32rem;
  line-height: 0.32rem;
  font-size: 0.14rem;
\`;
const SizeableButton = styled.button(props => \`
  display: inline;
  width: \${px2rem_1(props.width, OPTIONS_1)};
  height: \${props.height};
  font-size: 0.16rem;
\`);
",
  "sourceMapText": undefined,
}
`;

exports[`e2e should work 1`] = `
Object {
  "diagnostics": Array [],
  "outputText": "import styled, { css, createGlobalStyle, keyframes } from 'styled-components';
const mixins = css \`
  padding: 0 0.16rem;
  margin: 0.16rem 0.32rem 0.16rem 0.32rem;
\`;
const Animation = keyframes \`
  from {
    transform: translateX(1rem);
  }

  to {
    transform: translateX(-1rem);
  }
\`;
const Input = styled.input.attrs(props => ({
    type: 'password',
    size: props.size || '1em',
    width: props.width || 100,
})) \`
  color: palevioletred;
  font-size: 0.14rem;
  border: 1px solid palevioletred;
  border-radius: 0.08rem;
  width: \${props => props.width}px;
  padding: \${props => props.size};
\`;
const fontSize = 18;
const GlobalStyle = createGlobalStyle \`
  html body {
    font-size: \${fontSize}px;
  }
\`;
function getHeight() {
    const height = 100;
    return height + window.screen.availHeight / 2;
}
const BlockButton = styled.button \`
  \${mixins};
  display: block;
  width: 100%;
  height: \${getHeight()}px;
  line-height: 0.96rem;
\`;
const lineHeight = '44';
const InlineButton = styled.button \`
  display: inline;
  width: \${props => {
    if (props.width) {
        return props.width;
    }
    else {
        return 0;
    }
}}px;
  line-height: \${lineHeight}px;
\`;
const ExtendedButton = styled(InlineButton) \`
  width: 1.2rem;
  height: 0.32rem;
  line-height: 0.32rem;
  font-size: 0.14rem;
\`;
const SizeableButton = styled.button(props => \`
  display: inline;
  width: \${props.width}px;
  height: \${props.height};
  font-size: 0.16rem;
\`);
",
  "sourceMapText": undefined,
}
`;
